force-app/main/default/objects/Home_URL__c/Home_URL__c.object-meta.xml
<CustomObject>
    <description>Home 화면 내 타시스템 URL 연계</description>
    <label>Home URL</label>
    <nameField>
        <label>System Name (KR)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home URL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>