force-app/main/default/objects/Home_URL__c/fields/SystemName_EN__c.field-meta.xml
<CustomField>
    <fullName>SystemName_EN__c</fullName>
    <label>System Name (EN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>