force-app/main/default/objects/Home_URL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>