force-app/main/default/objects/Home_URL__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>