force-app/main/default/objects/Home_URL__c/fields/User_s_Emails__c.field-meta.xml
<CustomField>
    <fullName>User_s_Emails__c</fullName>
    <label>User&apos;s Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>