force-app/main/default/objects/Home_URL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SystemName_EN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>